--- a/autotests/pyproject.toml
+++ b/autotests/pyproject.toml
@@ -2,6 +2,11 @@
 name = "autotests"
 version = "0.1.0"
 description = ""
+classifiers = [
+    "Operating System :: POSIX :: Linux",
+    "Programming Language :: Python :: 3",
+    "Topic :: Education :: Testing"
+    ]
 authors = ["Ivan Cheklin <ivan.cheklin.1985@gmail.com>"]
 
 [tool.poetry.dependencies]
@@ -13,3 +18,7 @@ pytest = "^5.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+capit = "capitalization.capitalization:main"
+
